Added pygments css

--- a/_posts/2000-01-01-template.md
+++ b/_posts/2000-01-01-template.md
@@ -19,6 +19,16 @@ content 1.2
 
 content 2.1
 
+{% highlight c++ %}
+#include <iostream>
+
+int main() {
+	std::cout << "Test" << std::endl;
+	return 0;
+}
+
+{% endhighlight %}
+
 ### SubItem #2.2
 
 content 2.2
